--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,3 +35,28 @@ h1 {
     background-color: #ffffff;
   }
 }
+
+input[type="checkbox"] {
+  appearance: none;
+  vertical-align: middle;
+  background-origin: border-box;
+  user-select: none;
+  flex-shrink: 0;
+  height: 1rem;
+  width: 1rem;
+  color: #2069f1;
+  background-color: #fff;
+  border-color: #2069f1;
+  border-width: 1px;
+  border-radius: 0.25rem;
+  border-style: solid;
+}
+
+input[type="checkbox"]:checked {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 16 16' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4a1 1 0 00-1.414-1.414L7 8.586 5.707 7.293z'/%3E%3C/svg%3E");
+  border-color: transparent;
+  background-color: currentColor;
+  background-size: 100% 100%;
+  background-position: 50%;
+  background-repeat: no-repeat
+}
